newtype-tools/tests/newtype-fail/enum.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/newtype-fail/enum.rs:4:1
  |
4 | enum Unit {}
  | ^^^^
